deployment_manifest/prod/mysql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 32000
