deployment_manifest/prod/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  namespace: kubernetes-dashboard
spec:
  tls:
    - hosts:
        - dashboard.blockchaintutorial.org
      secretName: blockchaintutorial-org
  rules:
    - host: dashboard.blockchaintutorial.org
      http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
